--- a/src/main/resources/com/rg4/darkbot/lang/strings_en.properties
+++ b/src/main/resources/com/rg4/darkbot/lang/strings_en.properties
@@ -1,17 +1,3 @@
 # suppress inspection "UnusedProperty" for whole file
 
-sample_module.config.boolean_value=Some boolean checkbox
-sample_module.config.some_value=Some boolean checkbox
-sample_module.config.integer_limit=Integer limited to 1-999
-sample_module.config.percentage_value=% value, can be used for health
-sample_module.config.key=Hotkey to press
-sample_module.config.move_ship=Move ship
-sample_module.config.ship_mode=Ship mode
-sample_module.config.percent_range=Percent range
-
-sample_module.flags.simple_flag.short=SF
-sample_module.flags.simple_flag=Sample flag
-sample_module.flags.simple_flag.desc=Sample flag for testing purposes, provided by sample module
-
-sample_module.menu.separator=Sample
-sample_module.menu.menu_entry=Sample menu
+auto_refiner.config.active=If the refiner is active, it will automatically refine items when they are available.
